objects/LLC_BI__ChangeMemoConfigProfile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for the change memo triggers (movemod) so it uses proper doc manager IDs.</description>
    <fields>
        <fullName>LLC_BI__DocManId__c</fullName>
        <description>The ID of the doc manager to move the file to (IE: Loan).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocMan ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocTabId__c</fullName>
        <description>The ID of the doc tab to move the file to (IE: Loan).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocTab ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocTypeId__c</fullName>
        <description>This field and custom setting is currently not being used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocType ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Enabled__c</fullName>
        <description>We can enable or disable this feature.
Yes | No</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Yes | No</inlineHelpText>
        <label>Enabled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo_Name__c</fullName>
        <description>This field indicates the Change Memo&apos;s forced name value.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name value that the change memo&apos;s names will be forced to. IE: &quot;Change Memo&quot;</inlineHelpText>
        <label>Memo Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Bankr - Change Memo Profile</label>
</CustomObject>